feat: add reforge system with blacksmith and stone support, including data structures and rendering